[package]
name = "benthic_asset_pipeline"
version = "0.0.0"
edition = "2024"

[build-dependencies]
#benthic_default_assets = { git = "https://github.com/benthic-mmo/benthic_default_assets.git", tag = "v0.0.0" }
benthic_default_assets = { path = "../benthic_default_assets/"}
benthic_protocol = {path = "../benthic_protocol/"}
gltf = "1.4.1"
uuid = "1.23.1"
indexmap = "2.14.0"
bvh_anim = "0.4.0"
bytemuck = "1.25.0"
glam = {version = "0.30.10", features=["serde"]}
serde = {version = "1.0.149", features=["derive"] }
serde_json = "1.0"

[features]
animations = []

[dependencies]
benthic_protocol = {path = "../benthic_protocol/"}
glam = "0.30.10"
once_cell = "1.21.4"
serde = "1.0.228"
strum = "0.28.0"
strum_macros = "0.28.0"
uuid = "1.23.1"
